<resources>
    <string name="app_name">Rondon</string>
    <string name="clinica_vet">Clínica Veterinaria</string>
    <string name="rondon">Rondón</string>
    <string name="Login">Login</string>
    <string name="clinica_vet_rondon">Clínica Veterinaria Rondón</string>
    <string name="email_or_user">Usuario</string>
    <string name="password">Password</string>
    <string name="new_user_01">¿No tienes cuenta?</string>
    <string name="new_user_02"><b>Inscribete Aqui</b></string>
    <string name="new_user_03">¿Ya tienes cuenta?</string>
    <string name="new_user_04"><b>Ingresa Aqui</b></string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_pasword">#616161</string>
    <string name="or">OR</string>
    <string name="checkin">Check In</string>
    <string name="registrar">Registrar</string>
    <string name="todo">TODO</string>
    <string name="clinica">Clínica</string>
    <string name="veterinaria">Veterinaria</string>
    <string name="registrar_usuario">Registro de Usuario</string>
    <string name="my_acount">Mi Cuenta</string>
    <string name="notify">Notificaciónes</string>
    <string name="menuHome">Menú Principal</string>
    <string name="quienessomos">Quiénes Somos</string>
    <string name="especialidades">Especialidades</string>
    <string name="servicios">Servicios</string>
    <string name="contactenos">Contáctenes</string>
    <string name="username">Email</string>
    <string name="verified">Verificado</string>
    <string name="ubicanos">Ubícanos</string>
    <string name="whatsapp">Escribenos a nuestro WhatsApp</string>
    <string name="producto_CRUD">Mantenimiento de Producto</string>
    <string name="perfil_CRUD">Mantenimiento de Usuario</string>
    <string name="mascota_CRUD">Mantenimiento de Mascota</string>
    <string name="cita">Citas</string>
    <string name="admin_setting">Administrador</string>
    <string name="seguridad">Seguridad</string>
    <string name="carritocompra">Carrito de Compra</string>
    <string name="perfil_usuario">Perfil del Usuario</string>
    <string name="imagen">es una imagen</string>
    <string name="nombre">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="dni">Nº Documento</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="user">Usuario</string>
    <string name="email">Email</string>
    <string name="consultas_especialidades">Consulta médica veterinaria con los mejores especialistas siempre dispuestos a dar todo por la salud y cuidado de tu mascota.</string>
    <string name="peluqueria_especialidades">Cuidamos el 100% del aspecto y la salud de tu engreído, siempre utilizando los productos de la más alta calidad del mercado.</string>
    <string name="internamientos_especialidades">Contamos con una área exclusiva para internamientos de última generación y el personal mejor calificado y dedicado las 24 horas al cuidado tu mascota.</string>
    <string name="petshop_especialidades">Contamos con la mejor y más variada tienda de artículos para mascotas en todo el país.</string>
    <string name="cirugia_especialidades">Atendemos todas las cirugía veterinaria en las más amplias y modernas instalaciones y con los cirujanos más experimentados.</string>
    <string name="laboratorio_especialidades">Disponemos de los mejores analistas y el más moderno laboratorio de muestras.</string>
    <string name="consultas_especialidad">Consultas de especialidad</string>
    <string name="consultas_medicas">Consultas Médicas</string>
    <string name="peluquería_mascotas">Peluquería para mascotas</string>
    <string name="internamientos">Internamientos de última generación</string>
    <string name="pet_Shop">Pet Shop</string>
    <string name="cirugias">Cirugías</string>
    <string name="laboratorio">Laboratorio</string>
    <string name="olvidar_pass">¿Olvidaste tu Contraseña?</string>
    <string name="num_doc">N° Documento</string>
    <string name="registrar_cuenta">Crear Cuenta</string>
    <string name="reset">Recuperar</string>
    <string name="ingrese_mail">Ingrese su Correo</string>
    <string name="perfil">Perfil</string>
    <string name="mi_Perfil">Mi Perfil</string>
    <string name="admin">Administrador</string>
    <string name="quienes_Somos_01">Somos la clínica veterinaria número 1 de todo el Perú, tenemos más de 50 años dedicados al cuidado y atención de las mascotas. \n\nOfreciendo servicios de peluquería para mascotas, consultas de especialidad, pet shop y emergencias las 24 horas.\n\nDisponemos de las mejores instalaciones y el personal mejor capacitado para garantizar el bienestar de tu mascota.\n\nLa tranquilidad y la salud de tu engreído estarán en las mejores manos, porque tú y tu mascota pasarán a formar parte de nuestra gran familia.</string>
    <string name="cita_registro">Registro de Citas</string>
    <string name="mascota">Mi Mascota</string>
    <string name="producto">Nuestros productos</string>
    <string name="citas">Citas</string>
    <string name="mi_mascota">Mi Mascota</string>
    <string name="nuestras_especialidad">Los Mejores Especialistas están al servicio de tu Mascota</string>
    <string name="nuestras_especialidad_01">Los Mejores Especialistas</string>
    <string name="nuestras_especialidad_02">Están al Servicio</string>
    <string name="nuestras_especialidad_03">de tu Mascota</string>
    <string name="oncologia">Oncología</string>
    <string name="oncologia_dr">Dr. Mario Verano</string>
    <string name="fisioterapia_dr">Dra. Luccia Carpio</string>
    <string name="fisioterapia">Fisioterapia</string>
    <string name="traumatologia">Traumatología</string>
    <string name="traumatologia_dr">Luis Pareja</string>
    <string name="neurologia">Neurología</string>
    <string name="neurologia_dr">Dr. Luis Ramos</string>
    <string name="odontologia">Odontología</string>
    <string name="odontologia_dr">Dr. Jorge Hun</string>
    <string name="oftalmologia">Oftalmología</string>
    <string name="oftalmologia_dr">Dra. Roxana Padilla</string>
    <string name="felinos">Felinos</string>
    <string name="felinos_dr">Dra. Lizette Ampuero</string>
    <string name="cardiologia">Cardiología</string>
    <string name="cardiologia_dr">Dr. Juan Diego Asencio</string>
    <string name="nutricion">Nutrición</string>
    <string name="nutricion_dr">Dra. Marisol Sevilla</string>
    <string name="nuestras_servicios">Nuestros Servicios</string>
    <string name="repeat_password">Repetir Password</string>
    <string name="content_description">Imagen</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Correo electronico</string>
    <string name="et_hint_address_id">Dirección</string>
    <string name="et_hint_dni_id">Documento de nacional de identidad</string>
    <string name="et_hint_password">Contraseña</string>
    <string name="lbl_forgot_password">¿Olvidaste tu clave?</string>
    <string name="btn_lbl_login">Ingresa aquí</string>
    <string name="don_t_have_an_account">¿No tienes una cuenta?</string>
    <string name="register"><u>Regístrate</u></string>
    <string name="create_an_account">CREAR CUENTA</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_first_name">Nombres</string>
    <string name="et_hint_confirm_password">Confirma contraseña</string>
    <string name="i_agree_to_the_terms_and_condition">Acepto los <u> Términos y condiciones </u></string>
    <string name="btn_lbl_register">Regístrate</string>
    <string name="already_have_an_account">¿Ya te creaste una cuenta?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">Ingresa tus nombres, por favor.</string>
    <string name="err_msg_enter_last_name">Ingresa tus apellidos, por favor.</string>
    <string name="err_msg_enter_email">Ingresa tu correo electónico, por favor.</string>
    <string name="err_msg_enter_password">Ingresa tu contraseña, por favor</string>
    <string name="err_msg_enter_confirm_password">Ingresa tu contraseña, por favor.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Las contraseñas no concuerdan.</string>
    <string name="err_msg_agree_terms_and_condition">Acepta los terminos y condiciones, por favor</string>
    <string name="please_wait">Espere un rato, porfavor&#8230;</string>
    <string name="title_forgot_password">¿TE OLVIDASTE TU CLAVE?</string>
    <string name="forgot_password_title_description">Ingresa tu nombre de usuario y correo electronico\ y te enviaremos un correo para reinici tu contraseña</string>
    <string name="btn_lbl_submit">Enviar</string>
    <string name="email_sent_success">\"¡Correo electronico enviado satisfactoriamente! \"</string>
    <string name="register_success">Te registraste exitosamente.</string>
    <string name="title_complete_profile">COMPLETA PERFIL DE USUARIO</string>
    <string name="et_hint_mobile_number">Numero telefonico</string>
    <string name="rb_lbl_male">MASCULINO</string>
    <string name="rb_lbl_female">FEMENINO</string>
    <string name="btn_lbl_save">GUARDAR</string>
    <string name="read_storage_permission_denied">LO siento, denegaste el permiso de almacenamiento. Lo puedes habilitar en opciones desde tu dispositivo.</string>
    <string name="image_selection_failed">¡La seleccion de la imagen falló!</string>
    <string name="err_msg_enter_mobile_number">Ingresa tu numero telefonico, por favor.</string>
    <string name="msg_profile_update_success">Tu perfil fue actualizado exitosamente.</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Menu Principal</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="please_click_back_again_to_exit">Cliclea de nuevo para salir, por favor.</string>
    <string name="title_products">Productos</string>
    <string name="title_orders">Pedidos</string>
    <string name="action_settings">Opciones</string>
    <string name="title_settings">Opciones</string>
    <string name="lbl_edit">Editar</string>
    <string name="lbl_addresses">Direcciones</string>
    <string name="btn_lbl_logout">Cerrar sesión</string>
    <string name="title_edit_profile">EDITAR PERFIL</string>
    <string name="action_add_product">AÑADIR PRODUCTO</string>
    <string name="title_add_product">AÑADIR PRODUCTO</string>
    <string name="et_hint_product_title">Título del producto</string>
    <string name="et_hint_product_price">Precio del producto (S/.)</string>
    <string name="et_hint_product_description">Descripcion del producto</string>
    <string name="et_hint_product_quantity">Cantidad de producto</string>
    <string name="err_msg_select_product_image">Selecciona una imagen de producto, porfavor.</string>
    <string name="err_msg_enter_product_title">Ingresa el título del producto, porfavor.</string>
    <string name="err_msg_enter_product_price">Ingresa el precio del producto, por favor.</string>
    <string name="err_msg_enter_product_description">Ingresa la descripcion del producto, por favor.</string>
    <string name="err_msg_enter_product_quantity">Ingresa la cantidad del producto, por favor.</string>
    <string name="product_uploaded_success_message">Tu producto fue actualizado exitosamente.</string>
    <string name="no_products_added_yet">¡No hay productos añadidos aún!</string>
    <string name="no_dashboard_item_found">¡No se encontraron los productos!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_delete_success_message">Tu producto fue borrado exitosamente.</string>
    <string name="delete_dialog_title">Borrar</string>
    <string name="delete_dialog_message">¿ Estás seguro que quieres borrar el producto?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_product_details">DETALLES DEL PRODUCTO</string>
</resources>